--- a/templates/take_quiz.html
+++ b/templates/take_quiz.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ quiz.title }}</title>
+    <title>{{ quiz.id }}</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
     <div class="container mt-4">
-        <h1>{{ quiz.title }}</h1>
+        <h1>{{ quiz.id }}</h1>
         <form method="POST">
             {% for question in questions %}
                 <div class="form-group">
